Made some changes

--- a/my-webpage-grid.html
+++ b/my-webpage-grid.html
@@ -15,7 +15,7 @@
             <section>
                 <div class="one">
                     <div class="col-6">
-                        <h4>LESEGO MODISE</h4>
+                        <div class="name">LESEGO MODISE</div>
                     </div>
                     <div class="col-6">
                         <img src="CT PIC.jpg" class="intropic">
@@ -24,7 +24,7 @@
             </section>
         </div>    
 
-        <h1>DESTINATION</h1>
+        <div class="desti">DESTINATION</div>
         <div class="row destination">
             <section>
                 <h2>Belize</h2>
@@ -55,7 +55,7 @@
             </section>
         </div>
 
-        <h1>FOREIGN LANGUAGE</h1>
+        <div class="lang">FOREIGN LANGUAGE</div >
         <div class="row language">  
             <section>
                 <h2>Portuguese</h2>
@@ -93,7 +93,7 @@
             </section>
         </div>
 
-        <h1>FAVOURITE SUBJECTS</h1>
+        <div class="sub">FAVOURITE SUBJECTS</div >
         <div class="row subject">
             <section>
                 <div class="qualification">Qualification: B.Com Honours in Information and Knowledge Management<br>
@@ -118,7 +118,7 @@
             </section>
         </div>
 
-        <h1>HISTORIC PLACES</h1>
+        <div class="his">HISTORIC PLACES</div >
         <div class="row history">
             <section>
                 <div class="col-4">
